# cryptid-rs

./: .gitignore  Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs
src/: codec.rs  config.rs  field.rs  lib.rs
