[package]
name = "cryptid-rs"
version = "0.1.2"
authors = ["Ville Laurikari <ville@laurikari.net>"]
edition = "2021"
description = "A library to encrypt and decrypt integer IDs to URL safe strings"
license = "MIT OR Apache-2.0"
repository = "https://github.com/laurikari/cryptid-rs"
readme = "README.md"

[lib]
name = "cryptid_rs"
path = "src/lib.rs"

[dev-dependencies]
criterion = "^0.5.1"
rand = "^0.8.5"
serde_json = "^1.0.133"

[dependencies]
aes = "^0.8.4"
base62 = "^2.0.3"
diesel = { version = ">=2.1.1, <3.0", features = ["postgres"] }
fpe = "^0.6.1"
hkdf = "^0.12.4"
hmac = { version = "^0.12.1", features = ["reset"] }
once_cell = "^1.20.2"
serde = { version = "^1.0.215", features = ["derive"] }
sha2 = "^0.10.8"
uuid = "^1.11.0"
